# MiniInferenceEngine

./: .aiexcludes
.github/workflows/: ci.yml  clippy.yml
engine/: CMakeLists.txt  engine.cpp  matrix_math.cu  test.cpp
manager/: .gitignore  Cargo.toml  build.rs  chat.js  common.css  common.js  config.toml  console.html  console.js  eslint.config.js  index.html  justfile  memory.html  memory.js  models.html  models.js  package-lock.json  package.json  playwright.config.js  settings.html  settings.js  static_crt.cmake  stats.html  stats.js  ui.spec.js
manager/.cargo/: config.toml
manager/src/: auth.rs  backend.rs  backend_candle.rs  backend_llamacpp.rs  lib.rs  main.rs  registry.rs  setup.rs  telemetry.rs  types.rs
