[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.12.1"

# The Hugging Face Stack
candle-core = { version = "0.10.2", features = ["cuda"] }
candle-nn = "0.10.2"
candle-transformers = { version = "0.10.2", features = ["cuda"] }
hf-hub = "0.5.0"        # To download the model files automatically
tokenizers = "0.22.2"   # To convert text to integer IDs
uuid = { version = "1.23.0", features = ["v4"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
tower-sessions = "0.12"
reqwest = { version = "0.13.2", features = ["json"] }
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"
