[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nvml-wrapper = "0.12.1"
sysinfo = "0.30"
self_cell = "1.2.2"

# The Hugging Face Stack
candle-core = { version = "0.10.2", features = ["cuda"], optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", features = ["cuda"], optional = true }
hf-hub = "0.5.0"        # To download the model files automatically
tokenizers = "0.22.2"   # To convert text to integer IDs
uuid = { version = "1.23.0", features = ["v4"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
tower-sessions = "0.14"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json"] }
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.11.0"
hex = "0.4.3"
async-trait = "0.1.79"
llama-cpp-2 = { version = "0.1.145", optional = true }
llama-cpp-sys-2 = { version = "0.1.143", optional = true }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
toml = "0.8"
surrealdb = { version = "2.6.1", features = ["kv-mem"] }
tower-sessions-surrealdb-store = "0.7.0"
native-tls = { version = "0.2", optional = true }

[features]
default = ["backend-candle"]
backend-candle = ["candle-core", "candle-nn", "candle-transformers"]
backend-llamacpp = ["llama-cpp-2", "llama-cpp-sys-2", "llama-cpp-2/cuda"]
native-tls = ["dep:native-tls", "surrealdb/native-tls"]
